--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
         <!-- Navigation -->
         <nav class="nav-bar">
             <div class="nav-title">
-                <h1>🚀 Telecom Digital Transformation Portfolio</h1>
+                <h1>🚀 TurkNet Data&Analytics Projects To Do</h1>
                 <p>Comprehensive analytics and optimization solutions</p>
             </div>
             <div class="nav-buttons">
